# shorthair

./: .bumpversion.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: actions.yaml
shorthair/: __init__.py  json.py  proxy.py
tests/: test_json.py  test_proxy.py
