[tool.poetry]
name = "shorthair"
version = "0.1.2"
description = "Shorthair provides a way to access JSON object, it returns None rather than raising KeyError when key does not exist."
authors = ["Aaron Zhang <rabbit.aaron@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
flake8 = "^3.9.2"
pre-commit = "^2.15.0"
pytest-cov = "^2.12.1"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
